tests/rosetta/out/Rust/angles-geometric-normalization-and-conversion.error
rustc: exit status 1
error[E0610]: `{float}` is a primitive type and therefore doesn't have fields
  --> /tmp/angles-geometric-normalization-and-conversion.rs:52:111
   |
52 |         let angles = vec![-2.0, -1.0, 0.0, 1.0, 2.0, 6.2831853, 16.0, 57.2957795, 359.0, 399.0, 6399.0, 1e+06.0];
   |                                                                                                               ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0610`.
